--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,43 @@ button {
 
 @media only screen and (min-width: 1440px) {
     /* For desktop: */
+    .container {
+        display: flex;
+        width: 65%;
+    }
+
+    .sedans {
+        border-radius: 10px 0 0 10px;
+        padding: 2.5em 3em;
+    }
     
+    .suv {
+        padding: 2.5em 3em;
+    }
+    
+    .luxury {
+        border-radius: 0 10px 10px 0;
+        padding: 2.5em 3em;
+    }
+
+    img {
+        width: 60px;
+        margin-bottom: 2em;
+    }
+
+    h1 {
+        font-size: 2.4em;
+    }
+
+    p {
+        font-size: 0.9em;
+        margin-right: 1.1em;
+        line-height: 1.8em;
+    }
+
+    button {
+        font-size: 0.9em;
+        margin-top: 3em;
+    }
 }
 
